--- a/src/components/ControleFinanceiro/ControleFinanceiro.css
+++ b/src/components/ControleFinanceiro/ControleFinanceiro.css
@@ -1,7 +1,9 @@
 .center{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
