chore: Refactor ControleFinanceiro component to use CSVDropZone and update styling

--- a/src/pages/Home.page.css
+++ b/src/pages/Home.page.css
@@ -1,11 +1,7 @@
-.center{
+body{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    padding: 0;
-    margin: 0;
     height: 100vh;
-
+    overflow: hidden;
 }
